@@ -1412,6 +1412,8 @@ org.dspace.eperson.Subscribe.authors                                            
 org.dspace.eperson.Subscribe.id                                                 = ID:
 org.dspace.eperson.Subscribe.new-items                                          = New Items:
 org.dspace.eperson.Subscribe.title                                              = Title:
+org.dspace.statistics.util.LocationUtils.unknown-continent                      = Unknown Continent
+org.dspace.statistics.util.LocationUtils.unknown-country                        = Unknown Country
 org.dspace.workflow.WorkflowManager.step1                                       = It requires reviewing.
 org.dspace.workflow.WorkflowManager.step2                                       = The submission must be checked before inclusion in the archive.
 org.dspace.workflow.WorkflowManager.step3                                       = The metadata needs to be checked to ensure compliance with the collection's standards, and edited if necessary.
